--- a/index.html
+++ b/index.html
@@ -66,6 +66,53 @@ label.inline{ display:flex; align-items:center; gap:8px; margin:6px 0 8px; font-
 #messageBar{
   margin-bottom:10px; color:#0f0; font-weight:bold;
 }
+  <head>
+  <style>
+    /* your existing styles … */
+
+    /* === Luxury Buy Button & Sidebar Updates === */
+    #buyButton{
+      position:fixed; top:70px; right:20px;
+      padding:12px 18px;
+      background:linear-gradient(135deg,#a3ff4d,#0f0);
+      color:#111; border:none; border-radius:30px; cursor:pointer; z-index:12;
+      font-weight:700; font-size:15px;
+      box-shadow:0 4px 12px rgba(0,255,100,0.3);
+      transition:all .25s ease;
+    }
+    #buyButton:hover{
+      background:linear-gradient(135deg,#0f0,#7dff32);
+      box-shadow:0 6px 16px rgba(0,255,100,0.5);
+      transform:translateY(-2px);
+    }
+
+    /* Sidebar */
+    #sidebar{
+      background:linear-gradient(180deg,#1a1a1a,#111);
+      box-shadow:-4px 0 16px rgba(0,0,0,0.6);
+    }
+    #sidebar.open{ right:0; }
+    @media (max-width:768px){
+      #sidebar{
+        right:0; bottom:-100%; width:100%; height:250px;
+        border-top:1px solid var(--grid);
+        transition:right .25s ease, bottom .4s ease;
+      }
+      #sidebar.open{ bottom:0; }
+    }
+
+    /* Success Message */
+    #messageBar{
+      margin-bottom:10px; 
+      color:#a3ff4d; font-weight:bold;
+      text-align:center; font-size:14px;
+      background:rgba(0,255,100,0.1);
+      border-radius:6px; padding:6px;
+      transition:opacity .3s ease;
+    }
+  </style>
+</head>
+
 </style>
 </head>
 <body>
@@ -327,3 +374,4 @@ resizeCanvas(); draw();
 </script>
 </body>
 </html>
+
