--- a/index.html
+++ b/index.html
@@ -296,7 +296,9 @@ canvas.addEventListener('wheel', e=>{
   e.preventDefault();
   const zoomFactor=Math.exp((e.deltaY<0?1:-1)*0.12);
   const prevScale=scale;
-  let next=prevScale*zoomFactor; next=Math.max(0.001,Math.min(60,next));
+  let next=prevScale*zoomFactor; // Compute the minimum scale that fits the whole grid inside the container
+const minScale = Math.min(container.clientWidth / cols, container.clientHeight / rows);
+next = Math.max(minScale, Math.min(60, next));
   const rect=canvas.getBoundingClientRect();
   const cx=e.clientX-rect.left,cy=e.clientY-rect.top;
   const worldX=(cx-offsetX)/prevScale,worldY=(cy-offsetY)/prevScale;
@@ -410,5 +412,6 @@ resizeCanvas(); draw();
 </script>
 </body>
 </html>
+
 
 
